Footer and Categories Section Added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <div class="landing11">
@@ -142,19 +144,50 @@
         <img src="./public/blue 2.svg" alt="">
         <img src="./public/white 3.svg" alt="">
       </div>
-      <h1 class=" px-32 py-20 text-5xl text-[#3a50b3] font-['Concert One'] font-extrabold">
-        COOL
-      </h1>
+      <div class="flex justify-between">
+       <div class="flex">
+        <h1 class=" px-32 py-20 text-[180px] text-[#3a50b3] concert-one-regular font-normal">
+          COOL
+        </h1>
+       </div>
+       <div class="flex relative w-full">
+         <img src="./public/elip.svg" class="absolute h-[500px] bottom-0 right-0 "  alt="">
+         <img src="./public/Ellipse 23.svg" class="absolute top-0 right-0" alt="">
+         <img src="./public/menta 2.svg" class="absolute bottom-60 right-0" alt="">
+         <img src="./public/menta 1.svg" class="absolute w-[503px] h-[432px] top-[-30px] right-90" alt="">
+         <img src="./public/green 3.svg"  class="absolute w-[503px] h-[432px] top-[-30px] right-90" alt>
+        </div>
+      </div>
+
     </section>
+
+  <section>
+    <div class="px-40 py-40  gap-x-40 flex justify-between">
+      <div class="flex flex-col gap-4">
+        <h1 class="text-[72px] text-gradient font-normal">Make It <br> Yours </h1>
+        <p class=" text-[20px] font-['League Spartan'] font-normal text-[#3A50B3] word-wrap">Wicked Wipes is an original advertising opportunity for businesses and a successful marketing tool that will surprise and delight your customers. Easily add your brand to customize the pod</p>
+      </div>
+      <div class="flex"><img class="white-color-icon" src="./public/whitelogo.svg"  alt="logo"></div>
+    </div>
+  </section>
+  <!-- Footer -->
     <section>
-      <div class="bg-[#3a50b3] px-10 py-5  flex justify-between">
+      <div class="bg-[#3A50B3] px-16 py-5  flex justify-between">
         <img
             class="blue-color-icon"
             loading="lazy"
             alt=""
             src="./public/blue-color.svg"
           />
-          <h1 class="text-white text-xl">Follow Us</h1>
+          <div class="flex flex-col gap-2">
+            <h1 class="text-white font-['League Spartan'] font-bold text-base">Follow Us</h1>
+            <div class="flex gap-3 items-center">
+              <img src="./public/Fb.svg" class="size-7" alt="fb">
+              <img src="./public/Instagram.svg" class="size-7" alt="fb">
+              <img src="./public/Dribbble.svg" class="size-7" alt="fb">
+              <img src="./public/LinkedIn.svg" class="size-7" alt="fb">
+            </div>
+          </div>
       </div>
     </section>
   </body>
