--- a/index.html
+++ b/index.html
@@ -3,33 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <!-- <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet"> -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./index.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Baloo:wght@400&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Concert One:wght@400&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=League Spartan:wght@400&display=swap"
-    />
-
- 
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Baloo:wght@400&display=swap"/>
+  <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=League Spartan:wght@400&display=swap"/>
+  <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
 
   </head>
   <body>
-    <div class="landing11">
+    <!-- <div class="landing11">
       <section class="landing11-inner">
         <div class="blue-color-parent">
           <img
@@ -129,12 +116,53 @@
           </div>
         </div>
       </section>
+    </div> -->
+   
+    <section class="px-40 py-40 flex flex-col items-center  w-full" style="background: radial-gradient(circle, #37A3F1 32%, #3A50B3 100%);">
+    <div class="flex w-full items-center justify-between">
+      <img src="./public/blue-color.svg" alt="">
+      <nav class="flex items-center justify-center items-center bg-blue-300 rounded-full">
+        <ul
+        id="menu"
+        class="flex  justify-center items-center text-center px-10 gap-x-8 text-white text-xl font-normal "
+      >
+        <li>
+          <a href="how-it-works.html">How it Works</a>
+        </li>
+        <li>
+          <a href="seller.html">Sellers</a>
+        </li>
+        <li>
+          <a href="buyer.html">Buyers</a>
+        </li>
+        <li>
+          <a href="#">About</a>
+        </li>
+        <li>
+          <a href="#">FAQ</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
+      </ul>
+      </nav>
     </div>
-    <section class="bg-white mw-100%">
-      <h1 class="mt-96  px-10 py-10 text-[#acd5ef] font-['Mitr'] text-6xl text-center items-center">Let’s make hygiene not only a priority but desirable too!</h1>
+    <div class="flex">
+      <div class="flex flex-col py-64 items-start w-full">
+        <h1 class="text-white text-[40px] concert-one-regular font-normal w-full">Hygienic, Safe, Natural, Environmentally 
+          Friendly Wipes</h1>
+        <p class="text-white text-xl font-normal py-5">A creative solution to clean and freshen hands</p>
+      </div>
+      <div class="flex">
+        <img src="./public/welcome.png" alt="" class="h-[900px]">
+      </div>
+    </div>
+    </section>
+    <section class="bg-white mw-100% h-[1024px] flex items-end">
+      <h1 class="mt-96  px-10 py-10 text-[#acd5ef] font-['Mitr'] text-6xl text-center ">Let’s make hygiene not only a priority but desirable too!</h1>
     </section>
     <section class="section_categories">
-      <h1 class="px-24 text-[#3a50b3] text-4xl font-['Mitr']">
+      <h1 class="px-24 text-[#3a50b3] text-[46px] font-['Mitr']">
         Refreshing natural Fragnances
       </h1>
       <div class="flex gap-2 px-24">
@@ -150,17 +178,20 @@
           COOL
         </h1>
        </div>
-       <div class="flex relative w-full">
+       <div class="flex relative w-full items-end">
          <img src="./public/elip.svg" class="absolute h-[500px] bottom-0 right-0 "  alt="">
          <img src="./public/Ellipse 23.svg" class="absolute top-0 right-0" alt="">
-         <img src="./public/menta 2.svg" class="absolute bottom-60 right-0" alt="">
+         <img src="./public/menta 2.svg" class="absolute bottom-64 right-10" alt="">
          <img src="./public/menta 1.svg" class="absolute w-[503px] h-[432px] top-[-30px] right-90" alt="">
-         <img src="./public/green 3.svg"  class="absolute w-[503px] h-[432px] top-[-30px] right-90" alt>
+         <img src="./public/green 3.svg"  class="absolute w-[503px] h-[432px] bottom-0 right-0" alt>
         </div>
       </div>
 
     </section>
 
+    <section class="bg-white">
+
+    </section>
   <section>
     <div class="px-40 py-40  gap-x-40 flex justify-between">
       <div class="flex flex-col gap-4">
