Private Label and Features Page Structure done

--- a/features.html
+++ b/features.html
@@ -80,10 +80,10 @@
                 <a href="features.html">Features</a>
               </li>
               <li>
-                <a href="seller.html">Private Label</a>
+                <a href="private-label.html">Private Label</a>
               </li>
               <li>
-                <a href="buyer.html">Who We are</a>
+                <a href="testimonials.html">Who We are</a>
               </li>
               <li>
                 <a href="#">Contact</a>
