--- a/private-label.html
+++ b/private-label.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap"
       rel="stylesheet"
     />
@@ -101,13 +105,13 @@
           One of a Kind
         </h1>
       </div>
-      <div class="py-6 w-full flex justify-center bg-blue-100 rounded-full">
+      <div class="py-6 w-full flex justify-center bg-blue-100 rounded-full hover:scale-105 duration-200">
         <h2 class="text-xl league-spartan">
           Wicked Wipes will give you an edge over your competition
         </h2>
       </div>
       <div class="flex flex-col w-full justify-center px-16 py-20">
-        <img src="/public/tissue.png" alt="" />
+        <img src="/public/tissue.png" alt="" class="hover:scale-105 duration-150" />
         <h2 class="text-xl text-[#3A50B3] text-center pt-10 font-medium">
           Being the only hand wipe of its kind elevates your business
           immediately.
@@ -163,9 +167,15 @@
           function and originality.
         </h2>
       </div>
-      <div class="flex w-full justify-center gap-x-10 py-20">
+      <div
+        class="flex w-full justify-center gap-x-10 py-20"
+      >
         <div class="rounded-full h-[450px] w-96 overflow-hidden">
-          <img src="/public/gallery1.jpg" alt="" class="h-full object-cover" />
+          <img
+            src="/public/gallery1.jpg"
+            alt=""
+            class="h-full object-cover"
+          />
         </div>
         <div class="rounded-full h-[450px] w-96 overflow-hidden">
           <img src="/public/gallery2.jpg" alt="" class="h-full object-cover" />
