--- a/private-label.html
+++ b/private-label.html
@@ -46,7 +46,7 @@
   <body>
     <section class="flex flex-col items-center w-full overflow-hidden h-screen">
       <div class="flex w-full items-center justify-between px-20 pt-10">
-        <img src="./public/logo.svg" alt="" />
+        <a href="index.html"><img src="./public/logo.svg" alt="" /></a>
         <nav class="flex items-center justify-center rounded-full">
           <ul
             id="menu"
